EDU-1589 Fix button group alignment on document edit panel (desktop and mobile)

--- a/src/components/pages/document.less
+++ b/src/components/pages/document.less
@@ -136,6 +136,10 @@
   }
 }
 
+.DocumentPage-focusHeaderButtonGroup {
+  display: inline-flex;
+}
+
 .DocumentPage-focusHeaderButton {
   .m-icon-button;
 
